# opencv_apps

./: .clang-format  .gitignore  .travis.sh  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  nodelet_plugins.xml  package.xml  setup.py
.github/workflows/: ci.yml
cfg/: AddingImages.cfg  BackGroundSubtraction.cfg  BilateralFilter.cfg  BlobDetection.cfg  CamShift.cfg  Centroid.cfg  CompareHistogram.cfg  ContourMoments.cfg  ConvexHull.cfg  CornerHarris.cfg  DISFlow.cfg  DiscreteFourierTransform.cfg  EdgeDetection.cfg  EqualizeHistogram.cfg  FBackFlow.cfg  FaceDetection.cfg  FaceRecognition.cfg  FindContours.cfg  GaussianFilter.cfg  GeneralContours.cfg  GoodfeatureTrack.cfg  HLSColorFilter.cfg  HSIColorFilter.cfg  HSLColorFilter.cfg  HSVColorFilter.cfg  HoughCircles.cfg  HoughLines.cfg  LKFlow.cfg  LabColorFilter.cfg  LineSegmentDetector.cfg  MatchTemplate.cfg  MedianFilter.cfg  Morphology.cfg  NormalizedBlockFilter.cfg  Objectness.cfg  PeopleDetect.cfg  PhaseCorr.cfg  Pyramids.cfg  RGBColorFilter.cfg  Sample.cfg  (+6 more)
config/: blob_detection.rviz  blob_detection_config.yaml
include/opencv_apps/: nodelet.h
launch/: adding_images.launch  background_subtraction.launch  bilateral_filter.launch  blob_detection.launch  blob_detection_ims.launch  camshift.launch  compare_histogram.launch  contour_moments.launch  convex_hull.launch  corner_harris.launch  dis_flow.launch  discrete_fourier_transform.launch  edge_detection.launch  equalize_histogram.launch  face_detection.launch  face_recognition.launch  fback_flow.launch  find_contours.launch  gaussian_filter.launch  general_contours.launch  goodfeature_track.launch  hls_color_filter.launch  hough_circles.launch  hough_lines.launch  hsi_color_filter.launch  hsl_color_filter.launch  hsv_color_filter.launch  intensity_histogram.launch  lab_color_filter.launch  line_segment_detector.launch  lk_flow.launch  match_template.launch  median_filter.launch  morphology.launch  normalized_block_filter.launch  objectness.launch  people_detect.launch  phase_corr.launch  pyramids.launch  rgb_color_filter.launch  (+7 more)
msg/: Blob.msg  BlobArray.msg  BlobArrayStamped.msg  Face.msg  Label.msg  Rect.msg
param/: blob_detectio_testn.yaml
scripts/: face_recognition_trainer.py  set_image.py
src/node/: standalone_nodelet_exec.cpp.in
src/nodelet/: adding_images_nodelet.cpp  background_subtraction_nodelet.cpp  blob_detection_nodelet.cpp  camshift_nodelet.cpp  centroid_nodelet.cpp  color_filter_nodelet.cpp  compare_histogram_nodelet.cpp  contour_moments_nodelet.cpp  convex_hull_nodelet.cpp  corner_harris_nodelet.cpp  dis_flow_nodelet.cpp  discrete_fourier_transform_nodelet.cpp  edge_detection_nodelet.cpp  equalize_histogram_nodelet.cpp  face_detection_nodelet.cpp  face_recognition_nodelet.cpp  fback_flow_nodelet.cpp  find_contours_nodelet.cpp  general_contours_nodelet.cpp  goodfeature_track_nodelet.cpp  hough_circles_nodelet.cpp  hough_lines_nodelet.cpp  intensity_histogram.cpp  line_segment_detector_nodelet.cpp  lk_flow_nodelet.cpp  match_template_nodelet.cpp  morphology_nodelet.cpp  nodelet.cpp  objectness_nodelet.cpp  people_detect_nodelet.cpp  phase_corr_nodelet.cpp  pyramids_nodelet.cpp  sample_nodelet.cpp  segment_objects_nodelet.cpp  simple_compressed_example_nodelet.cpp  simple_example_nodelet.cpp  simple_flow_nodelet.cpp  smoothing_filter_nodelet.cpp  smoothing_nodelet.cpp  threshold_nodelet.cpp  (+2 more)
test/: CMakeLists.txt  publishtest  test-adding_images.test  test-background_subtraction.test  test-bilateral_filter.test  test-blob-extraction.test  test-camshift.test  test-compare_histogram.test  test-contour_moments.test  test-convex_hull.test  test-corner_harris.test  test-dis_flow.test  test-discrete_fourier_transform.test  test-edge_detection.test  test-equalize_histogram.test  test-face_detection.test  test-face_recognition.test  test-fback_flow-nodelet.test  test-fback_flow.test  test-find_contours.test  test-gaussian_filter.test  test-general_contours.test  test-goodfeature_track.test  test-hls_color_filter.test  test-hough_circles.test  test-hough_lines.test  test-hsi_color_filter.test  test-hsl_color_filter.test  test-hsv_color_filter.test  test-lab_color_filter.test  test-line_segment_detector.test  test-lk_flow.test  test-match_template.test  test-median_filter.test  test-morphology.test  test-normalized_block_filter.test  test-objectness.test  test-people_detect.test  test-phase_corr.test  test-pyramids.test  (+10 more)
